# TEM-analysis

./: .gitignore  README.md  Template.txt  pyproject.toml  requirements-optional.txt  requirements-web.txt  requirements.txt
.streamlit/: config.toml
app/: README.md  freehand_trace.py  particle_review.py  requirements.txt  streamlit_app.py
app/freehand_frontend/: index.html
data/: README.md  calibration.csv  calibration.example.csv
data/labels/: README.md  manual_v1.csv  manual_v1.example.csv  manual_v2.template.csv
docs/: AI_WORKFLOW.md  DEPLOY_WEBSITE.md  DEVELOPMENT.md  GETTING_STARTED.md  HOW_IT_WORKS.md  LABELING_GUIDE.md  MANUAL.md  PROJECT_STATUS.md
outputs/demo/: README.md  s2_A_starting_rods_measurements.csv  s2_B_30min_measurements.csv  s2_D_65min_measurements.csv
outputs/user_runs/: README.md
outputs/validation/: paper_comparison.csv  s2_B_30min_measurements.csv  s2_D_65min_measurements.csv
scripts/: README.md  analyze_my_image.sh  build_manual_pdf.py  compare_manual_labels.py  extract_pdf_images.py  make_app_qr.py  prepare_paper_dataset.py  run_demo.sh  script.odt  script.py
src/tem_rods/: README.md  __init__.py  calibrate.py  classify.py  cli.py  distributions.py  io.py  measure.py  models.py  morphometrics.py  pipeline.py  preprocess.py  presets.py  scale_bar.py  segment.py  (+1 more)
tests/: README.md  test_calibrate.py  test_click_add.py  test_io.py  test_morphometrics.py  test_particle_review.py  test_pipeline.py  test_preprocess.py  test_scale_bar.py  test_segment_improvements.py  test_shape_match.py  test_validation_regression.py
(+10 files in other folders)
