[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tem-rods"
version = "0.1.0"
description = "CdSe/CdS TEM nanorod and dot analysis from microscopy images"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
tem-rods = "tem_rods.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
